--- a/index.html
+++ b/index.html
@@ -1,10 +1,327 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-  <title>タイトル</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanahashi's Portfolio</title>
+    <style>
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 20px 0;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        nav {
+            background: #444;
+            padding: 1rem;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        nav ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        nav ul li a:hover {
+            background-color: #555;
+            text-decoration: none;
+        }
+        section {
+            background: #fff;
+            margin: 20px 0;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h2 {
+            color: #333;
+            border-bottom: 2px solid #f4f4f4;
+            padding-bottom: 10px;
+        }
+        h3 {
+            color: #333;
+        }
+        .project {
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #ddd;
+        }
+        .project:last-child {
+            border-bottom: none;
+        }
+        .project h3 {
+            margin-top: 0;
+        }
+        .project-details {
+            display: grid;
+            grid-template-columns: 1fr 1fr; /* レイアウト比率を調整 */
+            gap: 30px;
+            align-items: start;
+        }
+        .project-media h4 {
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
+        .screenshots {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .screenshots img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+            height: 0;
+            overflow: hidden;
+            border-radius: 5px;
+            background-color: #000;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            padding: 5px 0;
+        }
+        ul li strong {
+            color: #555;
+        }
+        #skills ul {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        #skills li {
+            background: #e4e4e4;
+            color: #333;
+            padding: 5px 15px;
+            margin: 5px;
+            border-radius: 5px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #333;
+            color: #fff;
+        }
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-  <h1>見出し1</h1>
-  <p>テキスト</p>
+    <header>
+        <div class="container">
+            <h1>Tanahashi's Portfolio</h1>
+        </div>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#about-me">About me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#links">Links</a></li>
+            <li><a href="#contact-me">Contact me</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <section id="about-me">
+            <h2>About Me</h2>
+            <p>ゲームプログラマー志望の大学院生。</p>
+        </section>
+
+        <hr>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>JAPANESE PANCAKES</h3>
+                <div class="project-details">
+                    <div class="project-media">
+                        <h4>スクリーンショット</h4>
+                        <div class="screenshots">
+                            <img src="Images/JapanesePancakes/title.png" alt="JAPANESE PANCAKES Screenshot 1">
+                            <img src="Images/JapanesePancakes/play.png" alt="JAPANESE PANCAKES Screenshot 2">
+                        </div>
+                        <h4>プレイ動画</h4>
+                        <div class="video-container">
+                            <iframe src="Movies/JapanesePancakes.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <p><strong>ゲーム説明：</strong> 真夏の日本でパンケーキを焼くゲームです。マウス操作でフライパンを傾けて、パンケーキを焦がさないように焼き、制限時間内にスコアを稼ぎます。パンケーキをひっくり返すと加点（半回転：100点、1回転：500点、1回転半：2000点）、焦がしたり落としたりすると減点されます。 </p>
+                        <ul>
+                            <li><strong>開発期間：</strong> 1週間 </li>
+                            <li><strong>所要時間数の概算：</strong> 50時間 </li>
+                            <li><strong>開発メンバー：</strong> 1人 </li>
+                            <li><strong>動作環境：</strong> Web (<a href="https://unityroom.com/games/japanese_pancakes" target="_blank">unityroom</a>) </li>
+                            <li><strong>操作方法：</strong>
+                                <ul>
+                                    <li>マウス：フライパンを傾ける </li>
+                                    <li>Esc：メニュー画面表示 </li>
+                                </ul>
+                            </li>
+                            <li><strong>制作意図：</strong> Unity1週間ゲームジャムのお題「かえす」への投稿作品として制作しました。短期間で完成度の高いゲームを制作するスキルを磨くことを目的としました。 </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project">
+                <h3>アイアムマン (IamMan)</h3>
+                <div class="project-details">
+                    <div class="project-media">
+                        <h4>スクリーンショット</h4>
+                        <div class="screenshots">
+                           <img src="Images/IamMan/play.png" alt="IamMan Screenshot 1">
+                        </div>
+                        <h4>プレイ動画</h4>
+                        <div class="video-container">
+                           <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <p><strong>ゲーム説明：</strong> 2D物理アクションゲームです。鉄のスーツを着た男を操作し、手足からのガス噴射を調整して姿勢を制御し、ゴール地点に5秒以上静止することでステージクリアとなります。これが私が初めて制作したゲームです。 </p>
+                        <ul>
+                            <li><strong>開発期間：</strong> 1ヶ月 </li>
+                            <li><strong>所要時間数の概算：</strong> 100時間 </li>
+                            <li><strong>開発メンバー：</strong> 1人 </li>
+                            <li><strong>動作環境：</strong> Web (<a href="https://unityroom.com/games/i_am_man" target="_blank">unityroom</a>) </li>
+                            <li><strong>操作方法：</strong>
+                                <ul>
+                                    <li>左クリック：手からガス噴出 </li>
+                                    <li>スペースキー：足からガス噴出 </li>
+                                    <li>マウスカーソル：腕の向きを変える </li>
+                                    <li>Rキー：リトライ </li>
+                                </ul>
+                            </li>
+                            <li><strong>制作意図：</strong> サークル活動の一環として学園祭の展示用に制作し、Unityの基礎知識を身に着けることを目標としました。 </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project">
+                <h3>Goggle.dino</h3>
+                <div class="project-details">
+                     <div class="project-media">
+                        <h4>スクリーンショット</h4>
+                        <div class="screenshots">
+                           <img src="Images/Goggle.dino/title.png" alt="Goggle.dino Screenshot 1">
+                           <img src="Images/Goggle.dino/play.png" alt="Goggle.dino Screenshot 2">
+                        </div>
+                        <h4>プレイ動画</h4>
+                        <div class="video-container">
+                           <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <p><strong>ゲーム説明：</strong> Google Chromeの"chrome://dino"をオマージュしたランゲームです。障害物をよけ続けてハイスコアを目指します。本家との違いは、時間が経つと視界がぼやけてモザイクがかかり、瞬きをすることで元に戻るという点です。 </p>
+                        <ul>
+                            <li><strong>開発期間：</strong> 1週間 </li>
+                            <li><strong>所要時間数の概算：</strong> 50時間 </li>
+                            <li><strong>開発メンバー：</strong> 1人 </li>
+                            <li><strong>動作環境：</strong> Web (<a href="https://unityroom.com/games/goggle_dino" target="_blank">unityroom</a>) </li>
+                            <li><strong>操作方法：</strong>
+                                <ul>
+                                    <li>[Space] / [↑]：ジャンプ </li>
+                                    <li>[↓]：しゃがむ </li>
+                                    <li>[←] / [→]：目をつぶる </li>
+                                </ul>
+                            </li>
+                            <li><strong>制作意図：</strong> Unity1週間ゲームジャムのお題「あい」への投稿作品として制作しました。短期間で完成度の高いゲームを制作するスキルを磨くことを目的としました。 </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="skills">
+            <h2>Skills</h2>
+             <ul>
+                <li>C</li>
+                <li>C++</li>
+                <li>C#</li>
+                <li>Python</li>
+                <li>Shell</li>
+                <li>Unity</li>
+                <li>Git</li>
+            </ul>
+        </section>
+
+        <hr>
+
+        <section id="links">
+            <h2>Links</h2>
+            <ul>
+                <li><a href="https://github.com/tanahashi415" target="_blank">GitHub</a></li>
+                <li><a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank">unityroom</a></li>
+            </ul>
+        </section>
+
+        <hr>
+
+        <section id="contact-me">
+            <h2>Contact Me</h2>
+            <p>お仕事のご依頼・ご相談は、以下のメールアドレスまでご連絡ください。</p>
+            <p>Email: <a href="mailto:tnhs_jobhunting@outlook.jp">tnhs_jobhunting@outlook.jp</a></p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Your Name</p>
+    </footer>
 </body>
 </html>
