--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <header>
         <div class="container">
             <h1>Tanahashi's Portfolio</h1>
-            <p class="last-updated">最終更新日：2025年7月9日</p>
+            <p class="last-updated">最終更新日：2025年7月11日</p>
         </div>
     </header>
 
@@ -198,10 +198,11 @@
     <div class="container">
         <section id="about-me">
             <h2>About Me</h2>
-            <h3>自己紹介</h3>
+            <!--<h3>自己紹介</h3>-->
             <p>27卒のゲームプログラマーを目指している大学院生です。大学院では生成AIの応用に関する研究をしています。</p>
             <p>普段からUnityでゲームを作って、学園祭で展示したり<a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank">unityroom</a>に投稿したりしています。最近はプログラミングスキル向上のために<a href="https://atcoder.jp/users/yoCmasa" target="_blank">競技プログラミング</a>を始めました。趣味はゲームはもちろん、リアル脱出ゲームのような謎解きや、ボードゲームにも目がありません。</p>
             <p>面白いゲームやロジックについて話すのが大好きなので、ぜひ皆さんと色々お話しできたら嬉しいです。</p>
+            <!--
             <h3>学歴</h3>
             <ul>
               <li>2021年3月　岐阜県立岐山高等学校 普通科 卒業</li>
@@ -210,6 +211,7 @@
               <li>2025年4月　大阪公立大学大学院 情報学研究科 基幹情報学専攻 入学</li>
               <li>現在、同大学院、修士1年</li>
             </ul>
+            -->
         </section>
 
         <hr>
@@ -473,7 +475,7 @@
         <section id="contact-me">
             <h2>Contact Me</h2>
             <p>以下のメールアドレスまでご連絡ください。</p>
-            <p>Email: <a href="mailto:tnhs_jobhunting@outlook.jp">tnhs_jobhunting@outlook.jp</a></p>
+            <p>Email:yoshii44games@gmail.com</p>
         </section>
     </div>
 
