--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h2>About Me</h2>
             <!--<h3>自己紹介</h3>-->
             <p>27卒のゲームプログラマーを目指している大学院生です。大学院では生成AIの応用に関する研究をしています。</p>
-            <p>普段からUnityでゲームを作って、学園祭で展示したり<a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank">unityroom</a>に投稿したりしています。最近はプログラミングスキル向上のために<a href="https://atcoder.jp/users/yoCmasa" target="_blank">競技プログラミング</a>を始めました。趣味はゲームはもちろん、リアル脱出ゲームのような謎解きや、ボードゲームにも目がありません。</p>
+            <p>普段からUnityでゲームを作って、学園祭で展示したり<a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank" rel="noopener noreferrer">unityroom</a>に投稿したりしています。最近はプログラミングスキル向上のために<a href="https://atcoder.jp/users/yoCmasa" target="_blank" rel="noopener noreferrer">競技プログラミング</a>を始めました。趣味はゲームはもちろん、リアル脱出ゲームのような謎解きや、ボードゲームにも目がありません。</p>
             <p>面白いゲームやロジックについて話すのが大好きなので、ぜひ皆さんと色々お話しできたら嬉しいです。</p>
             <!--
             <h3>学歴</h3>
@@ -229,7 +229,7 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                            <iframe src="Movies/JapanesePancakes.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="Movies/JapanesePancakes.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="project-explain">
@@ -248,7 +248,7 @@
                         </p>
                         <p>
                           <strong>制作意図</strong><br>
-                          <a href="https://unityroom.com/unity1weeks/64" target="_blank">Unity1週間ゲームジャム お題「かえす」</a>への投稿作品として制作しました。短期間で完成度の高いゲームを制作するスキルを磨くことを目的としました。また、初めての3Dゲーム制作に挑戦しました。
+                          <a href="https://unityroom.com/unity1weeks/64" target="_blank" rel="noopener noreferrer">Unity1週間ゲームジャム お題「かえす」</a>への投稿作品として制作しました。短期間で完成度の高いゲームを制作するスキルを磨くことを目的としました。また、初めての3Dゲーム制作に挑戦しました。
                         </p>
                         <ul>
                           <strong>こだわった点</strong>
@@ -260,7 +260,7 @@
                         </ul>
                         <p>
                           <strong>リンク</strong><br>
-                          <a href="https://unityroom.com/games/japanese_pancakes" target="_blank">unityroom</a>
+                          <a href="https://unityroom.com/games/japanese_pancakes" target="_blank" rel="noopener noreferrer">unityroom</a>
                         </p>
                     </div>
                 </div>
@@ -277,7 +277,7 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                           <iframe src="Movies/Goggle.dino.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                           <iframe src="Movies/Goggle.dino.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="project-explain">
@@ -298,7 +298,7 @@
                       </p>
                       <p>
                         <strong>制作意図</strong><br>
-                        <a href="https://unityroom.com/unity1weeks/66" target="_blank">Unity1週間ゲームジャム お題「あい」</a>への投稿作品として制作しました。短期間で完成度の高いゲームを制作するスキルを磨くことを目的としました。
+                        <a href="https://unityroom.com/unity1weeks/66" target="_blank" rel="noopener noreferrer">Unity1週間ゲームジャム お題「あい」</a>への投稿作品として制作しました。短期間で完成度の高いゲームを制作するスキルを磨くことを目的としました。
                       </p>
                       <ul>
                         <strong>こだわった点</strong>
@@ -310,7 +310,7 @@
                       </ul>
                       <p>
                         <strong>リンク</strong><br>
-                        <a href="https://unityroom.com/games/goggle_dino" target="_blank">unityroom</a>
+                        <a href="https://unityroom.com/games/goggle_dino" target="_blank" rel="noopener noreferrer">unityroom</a>
                       </p>
                     </div>
                 </div>
@@ -326,7 +326,7 @@
                         </div>
                         <h4>プレイ動画</h4>
                         <div class="video-container">
-                           <iframe src="Movies/IamMan.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                           <iframe src="Movies/IamMan.mp4" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="project-explain">
@@ -355,7 +355,7 @@
                       </ul>
                       <p>
                         <strong>リンク</strong><br>
-                        <a href="https://unityroom.com/games/i_am_man" target="_blank">unityroom</a>
+                        <a href="https://unityroom.com/games/i_am_man" target="_blank" rel="noopener noreferrer">unityroom</a>
                       </p>
                     </div>
                 </div>
@@ -464,9 +464,9 @@
         <section id="links">
             <h2>Links</h2>
             <ul>
-                <li><a href="https://github.com/tanahashi415" target="_blank">GitHub</a></li>
-                <li><a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank">unityroom</a></li>
-                <li><a href="https://atcoder.jp/users/yoCmasa" target="_blank">Atcoder</a></li>
+                <li><a href="https://github.com/tanahashi415" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                <li><a href="https://unityroom.com/users/5mblykan2p7xvrgi0h1t" target="_blank" rel="noopener noreferrer">unityroom</a></li>
+                <li><a href="https://atcoder.jp/users/yoCmasa" target="_blank" rel="noopener noreferrer">Atcoder</a></li>
             </ul>
         </section>
 
@@ -475,7 +475,7 @@
         <section id="contact-me">
             <h2>Contact Me</h2>
             <p>以下のメールアドレスまでご連絡ください。</p>
-            <p>Email:yoshii44games@gmail.com</p>
+            <p>Gmail: yoshii44games@</p>
         </section>
     </div>
 
